--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,149 +1,59 @@
 # GitLab CI/CD pipeline for .NET Core Web API
-# Pipeline stages: build, test, docker, deploy
+# Minimal pipeline for debugging runner connectivity
 
 variables:
-  DOTNET_VERSION: "8.0"
-  SOLUTION_PATH: "WebAPI/WebAPI.sln"
-  PROJECT_PATH: "WebAPI/WebAPI/WebAPI.csproj"
-  TEST_PATH: "WebAPI/ZTest/ZTest.csproj"
-  DOCKER_IMAGE_NAME: "team03-webapi"
-  DOCKER_REGISTRY: "registry.gitlab.com"
-  TARGET_BRANCH: "CICD_2"  # Thay đổi branch này khi cần
-    # Git Access Configuration
-  GIT_STRATEGY: fetch  # Để GitLab tự clone
-  GIT_DEPTH: 20
-  
-  # These should be set in GitLab CI/CD Variables (Settings > CI/CD > Variables)
-  # GIT_ACCESS_TOKEN: $GIT_ACCESS_TOKEN  # Set this in GitLab Variables
+  TARGET_BRANCH: "CICD_2"
+
+# Very simple job to test runner
+hello-world:
+  stage: connectivity
+  image: alpine:latest
+  script:
+    - echo "Hello from GitLab CI!"
+    - whoami
+    - pwd
+    - ls -la
+    - echo "Job completed successfully!"
+  rules:
+    - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
+
+# Test with Ubuntu
+ubuntu-test:
+  stage: connectivity
+  image: ubuntu:latest
+  script:
+    - echo "Testing with Ubuntu image..."
+    - apt-get update -qq
+    - apt-get install -y -qq git
+    - echo "Ubuntu test completed!"
+  rules:
+    - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
 
 stages:
-  - build
-  - test
+  - connectivity
 
-# Restore and build the .NET solution
-build-job:
-  tags:
-    - docker
-  stage: build
+# Very simple job to test runner
+hello-world:
+  stage: connectivity
+  image: alpine:latest
   script:
-    - echo "Starting .NET build process..."
+    - echo "Hello from GitLab CI!"
+    - whoami
+    - pwd
     - ls -la
-    - cd WebAPI
-    - dotnet --version
-    - dotnet restore WebAPI.sln
-    - dotnet build WebAPI.sln --configuration Release --no-restore
-    - echo "Build completed successfully!"
-  artifacts:
-    paths:
-      - WebAPI/WebAPI/bin/Release/
-      - WebAPI/Application/bin/Release/
-      - WebAPI/Domain/bin/Release/
-      - WebAPI/Infrastructure/bin/Release/
-    expire_in: 1 hour
+    - echo "Job completed successfully!"
   rules:
     - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
 
-# Run unit tests
-unit-test-job:
-  stage: test
-  tags:
-    - docker
-  dependencies:
-    - build-job
+# Test with Ubuntu
+ubuntu-test:
+  stage: connectivity
+  image: ubuntu:latest
   script:
-    - echo "Running unit tests..."
-    - cd WebAPI
-    - dotnet test ZTest/ZTest.csproj --configuration Release --no-build --logger trx --results-directory TestResults/
-    - echo "Unit tests completed!"
-  artifacts:
-    when: always
-    paths:
-      - WebAPI/TestResults/
-    reports:
-      junit:
-        - WebAPI/TestResults/*.trx
-    expire_in: 1 week
+    - echo "Testing with Ubuntu image..."
+    - apt-get update -qq
+    - apt-get install -y -qq git
+    - echo "Ubuntu test completed!"
   rules:
     - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
 
-# Code quality and linting
-lint-test-job:
-  stage: test
-  tags:
-    - docker
-  dependencies:
-    - build-job
-  script:
-    - echo "Running code analysis..."
-    - cd WebAPI
-    - dotnet format --verify-no-changes --verbosity diagnostic WebAPI.sln || echo "Code formatting issues found"
-    - echo "Code analysis completed!"
-  allow_failure: true
-  rules:
-    - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
-
-# Build and push Docker image (DISABLED for now)
-# docker-build-job:
-#   stage: docker
-#   tags:
-#     - deploy
-#   dependencies:
-#     - build-job
-#   image: docker:24.0.5
-#   services:
-#     - docker:24.0.5-dind
-#   variables:
-#     DOCKER_TLS_CERTDIR: "/certs"
-#   before_script:
-#     - docker info
-#     - echo "Logging in to GitLab Container Registry..."
-#     - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER --password-stdin $CI_REGISTRY
-#   script:
-#     - echo "Building Docker image..."
-#     - docker build -t $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:$CI_COMMIT_SHORT_SHA .
-#     - docker build -t $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:latest .
-#     - echo "Pushing Docker images..."
-#     - docker push $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:$CI_COMMIT_SHORT_SHA
-#     - docker push $CI_REGISTRY_IMAGE/$DOCKER_IMAGE_NAME:latest
-#     - echo "Docker image built and pushed successfully!"
-#   rules:
-#     - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
-
-# Deploy to staging (DISABLED for now)
-# deploy-staging:
-#   stage: deploy
-#   tags:
-#     - deploy
-#   dependencies:
-#     - docker-build-job
-#   environment:
-#     name: staging
-#     url: http://staging.team03-api.local
-#   script:
-#     - echo "Deploying to staging environment..."
-#     - docker-compose -f docker-compose.yml down || true
-#     - docker-compose -f docker-compose.yml pull
-#     - docker-compose -f docker-compose.yml up -d
-#     - echo "Application deployed to staging!"
-#   rules:
-#     - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
-
-# Deploy to production (DISABLED for now)
-# deploy-production:
-#   stage: deploy
-#   tags:
-#     - deploy
-#   dependencies:
-#     - docker-build-job
-#   environment:
-#     name: production
-#     url: http://team03-api.production.local
-#   script:
-#     - echo "Deploying to production environment..."
-#     - docker-compose -f docker-compose.yml down || true
-#     - docker-compose -f docker-compose.yml pull
-#     - docker-compose -f docker-compose.yml up -d
-#     - echo "Application deployed to production!"
-#   when: manual
-#   rules:
-#     - if: '$CI_COMMIT_REF_NAME == $TARGET_BRANCH'
